<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel_pro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/editProfile"
                android:textColor="@color/whitecolor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/drawer_profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/place_holder"
                local:civ_border_color="#EEEEEE"
                local:civ_border_width="2dp"
                local:civ_shadow="true"
                local:civ_shadow_color="#8BC34A"
                local:civ_shadow_radius="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/firstName"
                    android:textColor="@color/whitecolor" />

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/outline_bg"
                    android:backgroundTint="@color/whitecolor"
                    android:hint="@string/firstName"
                    android:inputType="text"
                    android:maxLength="30"
                    android:paddingLeft="15dp"
                    android:textCursorDrawable="@null" />>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/lastName"
                    android:textColor="@color/whitecolor" />

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/outline_bg"
                    android:backgroundTint="@color/whitecolor"
                    android:hint="@string/lastName"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:paddingLeft="15dp"
                    android:textCursorDrawable="@null" />
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/dharmaName"
                    android:textColor="@color/whitecolor" />

                <EditText
                    android:id="@+id/edtDharmaName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/outline_bg"
                    android:backgroundTint="@color/whitecolor"
                    android:hint="@string/dharmaName"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:paddingLeft="15dp"
                    android:textCursorDrawable="@null" />
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textColor="@color/whitecolor" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/outline_bg"
                    android:backgroundTint="@color/whitecolor"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:paddingLeft="15dp"
                    android:textCursorDrawable="@null" />
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/mobile"
                    android:textColor="@color/whitecolor" />

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/outline_bg"
                    android:backgroundTint="@color/whitecolor"
                    android:hint="@string/mobile"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:paddingLeft="15dp"
                    android:textCursorDrawable="@null" />
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/obtainedOrdination"
                    android:textColor="@color/whitecolor" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <RadioButton
                        android:id="@+id/radioYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="@color/whitecolor" />

                    <RadioButton
                        android:id="@+id/radioNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@color/whitecolor" />
                </RadioGroup>

                >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/countryOfResidence"
                    android:textColor="@color/whitecolor" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerCountryResidence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/tvInterestedEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/iAmInterestedInEvents"
                    android:textColor="@color/whitecolor" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerCountryList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:padding="6dp"
                        android:src="@drawable/earth"
                        android:tint="@color/whitecolor" />

                    <TextView
                        android:id="@+id/tvLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:paddingLeft="5dp"
                        android:text="@string/changeLanguage"
                        android:textColor="@color/whitecolor"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnChangePassword"
                        android:layout_width="140dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/outline_bg"
                        android:backgroundTint="@color/logincolor"
                        android:text="@string/changePassword"
                        android:textAllCaps="false"
                        android:textColor="@color/whitecolor" />

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="140dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/outline_bg"
                        android:backgroundTint="@color/logincolor"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/whitecolor" />
                </LinearLayout>
                >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>