<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/poprootll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/list_bg_rounded"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="15dp">


    <TextView
        android:id="@+id/titlepop"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="18dp"
        android:gravity="center"
        android:text="@string/forgetPassword"
        android:textColor="@color/colorPrimary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
         />

            <EditText
                android:id="@+id/editTextOtp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="18dp"
                android:hint="@string/emailId"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonConfirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button"
        android:textColor="@color/whitecolor"
        android:elevation="15dp"
        android:textSize="18dp"
        android:padding="10dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
     />
</LinearLayout>

